2011-12-16  Paul Lesniewski <paul@squirrelmail.org>
	* Minor Makefile cleanup complements Brad Smith
	* Fixed header include issue for OpenBSD (thanks to Brad Smith)

2011-11-23  Paul Lesniewski <paul@squirrelmail.org>
	* Added DESTDIR support to install scripts (thanks to Brad Smith)

2011-11-09  Paul Lesniewski <paul@squirrelmail.org>
	* Fixed minor bug where too many spaces were added before
          XIMAPPROXY in the CAPABILITY string (thanks to Kirill Miazine)

2011-04-17  Paul Lesniewski <paul@squirrelmail.org>
	* Added configurable, arbitrary pre-authentication command
	  that the administrator can use to send non-standard
	  commands to the server before each user authenticates
	  (for an example usage, see:
	  http://en.wikipedia.org/wiki/Yahoo!_Mail#Free_IMAP_and_SMTPs_access )

2011-04-17  Paul Lesniewski <paul@squirrelmail.org>
	* Add restart operation to (linux) init script

	* Add BSD-style init script (thanks to Emmanuel Dreyfus)

2011-04-17  Paul Lesniewski <paul@squirrelmail.org>
	* Fixed server connection synchronization issues in the SELECT
	  cache code (ensure server failures result in server connections
	  being fully shut down and removed from connection cache).

2011-04-17  Paul Lesniewski <paul@squirrelmail.org>
	* When NO or BAD response is returned from the server against
	  a LOGIN or AUTHENTICATE request, we now log the full server
	  response and pass it back to the client (useful if client
	  is watching for RFC 5530 response codes).  See:
	  http://thread.gmane.org/gmane.mail.squirrelmail.imapproxy/4

2011-03-11  Paul Lesniewski <paul@squirrelmail.org>
	* Fixed server connection synchronization issue that occurred when
	  clients closed their connection immediately after logging in and
	  associated security issue of closing such server connections
	  without invalidating the connection in the internal connection
          cache (thanks to Jose Celestino).

2011-03-07  Paul Lesniewski <paul@squirrelmail.org>